--- a/streamlit_toggle_diy/frontend/package.json
+++ b/streamlit_toggle_diy/frontend/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "sstreamlit_toggle_switch_diy",
-  "version": "1.0.1",
+  "name": "streamlit_toggle_diy",
+  "version": "1.1.3",
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.12.4",
